# cell2sentence

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pylintrc  setup.cfg
.github/workflows/: main.yml
docs/: Makefile
docs/source/: conf.py  csdata.rst  csmodel.rst  index.rst  prompt_formatter.rst  quickstart.rst  tasks.rst  utils.rst
src/cell2sentence/: __init__.py  csdata.py  csmodel.py  prompt_formatter.py  tasks.py  utils.py
src/cell2sentence/prompts/: README.md  single_cell_cell_type_conditional_generation_prompts.json  single_cell_cell_type_prediction_prompts.json
src/cell2sentence/tests/: small_data.csv  small_data_diffgenes.csv  test_csdata.py  test_csmodel.py  test_prompt_formatter.py  test_tasks.py
tutorials/: c2s_tutorial_0_data_preparation.ipynb  c2s_tutorial_1_rank_transformation_and_reconstruction.ipynb  c2s_tutorial_2_cell_embedding.ipynb  c2s_tutorial_3_finetuning_on_new_datasets.ipynb  c2s_tutorial_4_cell_type_prediction.ipynb  c2s_tutorial_5_cell_generation.ipynb  c2s_tutorial_5_cell_type_generation.ipynb  c2s_tutorial_6_cell_annotation_with_foundation_model.ipynb
