[metadata]
name = cell2sentence
version = 0.0.2
author = Rahul Dhodapkar
author_email = rahul.dhodapkar@yale.edu
description = cell2sentence: create cell sentences from sequencing data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rahuldhodapkar/cell2sentence
license = 'BY-NC-ND'
project_urls =
    Bug Tracker = https://github.com/rahuldhodapkar/cell2sentence/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    torch
    transformers
    datasets
    anndata
    scanpy
    numpy
    pandas
    scipy
    tqdm
    scikit-learn
    jupyterlab
    accelerate
    plotnine

[options.packages.find]
where = src

[options.package_data]
* = *.json